[metadata]
name = hrinflux
version = 1.1.0
author = Bjørn Hartfelt
author_email = bha@helloretail.com
description = A class for sending metrics to the Hello Retail InfluxDB by UDP.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://bitbucket.org/addwish/hrinflux
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
